test/Frontend/no-arguments.swift
// RUN: not %swift 2>&1 | FileCheck %s

// CHECK: <unknown>:0: error: this mode requires at least one input file
